fix for javax.annotation.Resource lookup attribute